Updated version to 6.0.0-preview-0115

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -8,12 +8,12 @@
 
 <CascadingValue Value="this">
     <div class="u-grid">
-        @if (!ColumnScanComplete && RenderMode is UmbrellaGridRenderMode.Table)
+        @*@if (!ColumnScanComplete && RenderMode is UmbrellaGridRenderMode.Table)
         {
             <CascadingValue Name="ScanMode" Value="true">
                 @Columns?.Invoke(default!)
             </CascadingValue>
-        }
+        }*@
 
         @if (FilterableColumns?.Count > 0 && ShowFilters)
         {
