Changes to move styles to use scoped css. Updated NPM packages.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/LoadingStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/LoadingStateView.razor
@@ -1,4 +1,4 @@
-﻿<div class="u-state-view u-state-view--loading">
+﻿<div class="u-loading-state-view">
     @if (ChildContent is not null)
     {
         @ChildContent
