--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/EmptyStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/EmptyStateView.razor
@@ -1,4 +1,4 @@
-﻿<div class="u-state-view u-state-view--empty">
+﻿<div class="u-empty-state-view">
     @if (ChildContent is not null)
     {
         @ChildContent
