--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
@@ -1,4 +1,4 @@
-﻿<div class="u-state-view u-state-view--error">
+﻿<div class="u-error-state-view">
     @if (ChildContent is not null)
     {
         @ChildContent
