Fixes Updated version to 6.0.0-preview-0165

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Messages/SuccessMessage.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Messages/SuccessMessage.razor
@@ -1,4 +1,4 @@
-﻿@inherits SuccessMessageBase
+﻿@inherits MessageComponentBase
 
 @if (!string.IsNullOrWhiteSpace(Message) || ChildContent != null)
 {
