--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Messages/ErrorMessage.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Messages/ErrorMessage.razor
@@ -1,4 +1,4 @@
-﻿@inherits ErrorMessageBase
+﻿@inherits MessageComponentBase
 
 @if (!string.IsNullOrWhiteSpace(Message) || ChildContent != null)
 {
