--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Messages/WarningMessage.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Messages/WarningMessage.razor
@@ -1,4 +1,4 @@
-﻿@inherits WarningMessageBase
+﻿@inherits MessageComponentBase
 
 @if (!string.IsNullOrWhiteSpace(Message) || ChildContent != null)
 {
