Grid Changes (WIP)

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -79,6 +79,10 @@
                                     }
                                     else if(column.FilterControlType is UmbrellaColumnFilterType.DateRange)
                                     {
+
+                                    }
+                                    else if (column.FilterControlType is UmbrellaColumnFilterType.AutoComplete)
+                                    {
                                         
                                     }
                                     else
