--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -1,4 +1,5 @@
-﻿@typeparam TItem
+﻿@using Blazored.Typeahead
+@typeparam TItem
 
 @{
 #pragma warning disable CS8625
@@ -77,13 +78,16 @@
                                             </div>
                                         </div>
                                     }
-                                    else if(column.FilterControlType is UmbrellaColumnFilterType.DateRange)
+                                    else if (column.FilterControlType is UmbrellaColumnFilterType.DateRange)
                                     {
-
+                                        <p>Date Range: TODO</p>
                                     }
                                     else if (column.FilterControlType is UmbrellaColumnFilterType.AutoComplete)
                                     {
-                                        
+                                        <div class="form-group form-floating">
+                                            <BlazoredTypeahead id="@id" SearchMethod="column.AutoCompleteSearchMethod" @bind-Value="column.FilterValue" />
+                                            <label for="@id">@column.Heading</label>
+                                        </div>
                                     }
                                     else
                                     {
