Added a new UmbrellaMemberPath attribute to allow for these paths to be declared on models rather than using the properties on UmbrellaGrid columns. Added associated extension methods to allow these to be accessible. Updated version to 6.0.0-preview-0167

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -85,7 +85,19 @@
                                     else if (column.FilterControlType is UmbrellaColumnFilterType.AutoComplete)
                                     {
                                         <div class="form-group form-floating">
-                                            <BlazoredTypeahead id="@id" SearchMethod="column.AutoCompleteSearchMethod" @bind-Value="column.FilterValue" />
+                                            @* <BlazoredTypeahead
+                                                id="@id"
+                                                
+                                                @bind-Value="column.FilterValue"
+                                                Debounce="300"
+                                                MaximumSuggestions="10"
+                                                MinimumLength="3"
+                                                TItem="int"
+                                                               TValue="column.AutoCompleteValueType">
+                                                <SelectedTemplate>
+                                                    
+                                                </SelectedTemplate>
+                                            </BlazoredTypeahead> *@
                                             <label for="@id">@column.Heading</label>
                                         </div>
                                     }
