--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -86,19 +86,25 @@
                                     {
                                         <div class="form-group form-floating">
                                             @* <BlazoredTypeahead
-                                                id="@id"
-                                                
-                                                @bind-Value="column.FilterValue"
-                                                Debounce="300"
-                                                MaximumSuggestions="10"
-                                                MinimumLength="3"
-                                                TItem="int"
-                                                               TValue="column.AutoCompleteValueType">
-                                                <SelectedTemplate>
-                                                    
-                                                </SelectedTemplate>
-                                            </BlazoredTypeahead> *@
+                            id="@id"
+
+                            @bind-Value="column.FilterValue"
+                            Debounce="300"
+                            MaximumSuggestions="10"
+                            MinimumLength="3"
+                            TItem="int"
+                            TValue="column.AutoCompleteValueType">
+                            <SelectedTemplate>
+
+                            </SelectedTemplate>
+                            </BlazoredTypeahead> *@
                                             <label for="@id">@column.Heading</label>
+                                        </div>
+                                    }
+                                    else if (column.FilterControlType is UmbrellaColumnFilterType.Date && column is UmbrellaColumn<TItem, DateTime> dtColumn)
+                                    {
+                                        <div class="form-group form-floating">
+                                            <InputDate @bind-Value="dtColumn.FilterValue" />
                                         </div>
                                     }
                                     else
