--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -92,22 +92,35 @@
                                             </div>
                                         </div>
                                     }
-                                    else if (column.FilterControlType is UmbrellaColumnFilterType.AutoComplete)
+                                    else if (column.FilterControlType is UmbrellaColumnFilterType.AutoComplete && column.AutoCompleteSearchMethod is not null)
                                     {
                                         <div class="form-group form-floating">
-                                            @* <BlazoredTypeahead
-                            id="@id"
-
-                            @bind-Value="column.FilterValue"
-                            Debounce="300"
-                            MaximumSuggestions="10"
-                            MinimumLength="3"
-                            TItem="int"
-                            TValue="column.AutoCompleteValueType">
-                            <SelectedTemplate>
-
-                            </SelectedTemplate>
-                            </BlazoredTypeahead> *@
+                                            <BlazoredTypeahead id="@id"
+                                                               class="u-grid__autocomplete-filter"
+                                                               @bind-Value="column.FilterValue"
+                                                               Debounce="column.AutoCompleteDebounce"
+                                                               MaximumSuggestions="column.AutoCompleteMaximumSuggestions"
+                                                               MinimumLength="column.AutoCompleteMinimumLength"
+                                                               SearchMethod="column.AutoCompleteSearchMethod"
+                                                               TItem="string"
+                                                               TValue="string">
+                                                <SelectedTemplate>
+                                                    <div class="u-grid__autocomplete-filter__selected">@context</div>
+                                                </SelectedTemplate>
+                                                <ResultTemplate>
+                                                    <div class="u-grid__autocomplete-filter__result">@context</div>
+                                                </ResultTemplate>
+                                                <HelpTemplate>
+                                                    <div class="u-grid__autocomplete-filter__help">
+                                                        Please enter a minimum of @column.AutoCompleteMinimumLength characters to start searching.
+                                                    </div>
+                                                </HelpTemplate>
+                                                <NotFoundTemplate>
+                                                    <div class="u-grid__autocomplete-filter__not-found">
+                                                        We couldn't find any options that match your search. Please try again using a different search term.
+                                                    </div>
+                                                </NotFoundTemplate>
+                                            </BlazoredTypeahead>
                                             <label for="@id">@column.Heading</label>
                                         </div>
                                     }
