Fixes Updated version to 6.0.0-preview-0190

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/Dialogs/DateRangeDialog.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/Dialogs/DateRangeDialog.razor
@@ -3,7 +3,7 @@
 
 <UmbrellaDialog>
     <p>Please select a date range.</p>
-    <EditForm Model="Model" OnSubmit="SubmitFormAsync" novalidate>
+    <EditForm Model="Model" OnValidSubmit="SubmitFormAsync" novalidate>
         <DataAnnotationsValidator />
 
         <div class="form-group form-floating">
