--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor.scss
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor.scss
@@ -53,6 +53,65 @@
 				}
 			}
 		}
+
+		/*::deep .blazored-typeahead
+		{
+			&__controls
+			{
+				position: relative;
+			}
+
+			&__input
+			{
+				padding: 1rem 0.75rem;
+				height: calc(3.5rem + 2px);
+				line-height: 1.25;
+				display: block;
+				width: 100%;
+				font-size: 1rem;
+				font-weight: 400;
+				color: #333;
+				background-color: #fff;
+				background-clip: padding-box;
+				border: 1px solid #ced4da;
+				-webkit-appearance: none;
+				-moz-appearance: none;
+				appearance: none;
+				border-radius: 0.5rem;
+				transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+				&:focus
+				{
+					padding-top: 1.625rem;
+					padding-bottom: 0.625rem;
+
+					&::before
+					{
+						opacity: 0.65;
+						transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
+					}
+				}
+
+				&::before
+				{
+					content: '(attr(placeholder))';
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					padding: 1rem 0.75rem;
+					overflow: hidden;
+					text-align: start;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					pointer-events: none;
+					border: 1px solid transparent;
+					transform-origin: 0 0;
+					transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+				}
+			}
+		}*/
 	}
 
 	&__bulk-actions
