--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/AutoComplete/UmbrellaAutoComplete.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/AutoComplete/UmbrellaAutoComplete.razor
@@ -1,5 +1,5 @@
 ﻿<div class="u-autocomplete form-floating">
-    <input id="@_id" class="form-control" list="@("dl" + _id)" type="text" placeholder="@LabelText" value="@Value" @oninput="OnInput" @onchange="OnChangeAsync" spellcheck="false" autocomplete="off" data-lpignore="true" />
+    <input id="@_id" class="form-control" list="@("dl" + _id)" type="search" placeholder="@LabelText" value="@Value" @oninput="OnInput" @onchange="OnChangeAsync" spellcheck="false" autocomplete="off" data-lpignore="true" />
     <label for="@_id">@LabelText</label>
     <datalist id="@("dl" + _id)" class="u-autocomplete__datalist">
         @foreach(string option in _options)
