--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/AutoComplete/UmbrellaAutoComplete.razor.scss
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/AutoComplete/UmbrellaAutoComplete.razor.scss
@@ -1,3 +1,10 @@
 .u-autocomplete
 {
+	input[type="search"]::-webkit-search-decoration,
+	input[type="search"]::-webkit-search-cancel-button,
+	input[type="search"]::-webkit-search-results-button,
+	input[type="search"]::-webkit-search-results-decoration
+	{
+		display: none;
+	}
 }
