Grid Amends (WIP)

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -170,7 +170,7 @@
         }
         else if (CurrentState is LayoutState.Empty)
         {
-            SetColumnScanCompleted();
+            _ = SetColumnScanCompletedAsync();
 
             @if (EmptyMessageContent is not null)
             {
