--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/Dialogs/DateRangeDialog.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/Dialogs/DateRangeDialog.razor
@@ -1,5 +1,6 @@
 @using Umbrella.AspNetCore.Blazor.Components.Dialog
-@inherits DateRangeDialogBase
+@using Umbrella.AspNetCore.Blazor.Infrastructure
+@inherits UmbrellaDialogComponentBase
 
 <UmbrellaDialog>
     <p>Please select a date range.</p>
