Removed invalid aria attribute

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Pagination/UmbrellaPagination.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Pagination/UmbrellaPagination.razor
@@ -38,7 +38,7 @@
 			}
 		</ul>
 		<div class="pagination-size">
-			<div class="dropdown" aria-role="menu">
+			<div class="dropdown" role="menu">
                 <a class="btn @(SmallPagination ? "btn-sm" : "") btn-primary dropdown-toggle" href="#" role="button" id="@paginationSizeButtonId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					@PageSize
 				</a>
