Added the ability to add footer content to a table. Updated version to 6.0.0-preview-0329

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -293,6 +293,12 @@
                                 </tr>
                             }
                         </tbody>
+                        @if (FooterContent is not null)
+                        {
+                            <tfoot>
+                                @FooterContent
+                            </tfoot>
+                        }
                     </table>
                 </div>
 
